# temp

./: Makefile  Makefile.in  config.status  configure  kek  test.c  tt
config/: config.h
docs/: настройка.md  пинг.md
include/: nescadata.h  nescaengine.h  nescahttp.h  nescalog.h  nescaopts.h  nescathread.h
ncsock/: Makefile  Makefile.in  _base64_decode.c  _base64_encode.c  base.c  bpf.c  config.h  config.h.in  config.status  configure  configure.ac  configure~  dns_util_getip4.c  eth.c  eth_build.c  eth_open_cached.c  ethbsd.c  ethlinux.c  exthdr.c  ftp_qprc_version.c  genutils.c  get_active_interface_name.c  get_local_mac.c  http_qprc_pkt.c  http_qprc_robots_txt.c  http_qprc_sitemap_xml.c  httpreq_qprc_pkt.c  ip4_send_raw.c  md5.c  ncpcap.c  ncsock-config.h  read_acallback_any.c  read_acallback_ip.c  read_ippcap.c  read_ippktinfo.c  read_packet.c  read_util_datalinkoffset.c  read_util_fmtipopt.c  read_util_getip4data_pr.c  read_util_getip6data_pr.c  (+21 more)
ncsock/examples/: Makefile  ackping  ackping.c  crypttest  echoping  echoping.c  httpget  httpget.c  initping  initping.c  kek.c
ncsock/include/: arp.h  cmwc.h  dns.h  eth.h  ftp.h  http.h  icmp.h  igmp.h  ip.h  log.h  md5.h  mt19937.h  ncpcap.h  readpkt.h  sctp.h  sha256.h  sha512.h  smtp.h  socket.h  socks5.h  tcp.h  udp.h  utils.h
ncsock/include/sys/: debianfix.h  nethdrs.h  types.h
ncsock/libpcap/: config.status
ncsock/libpcap/pcap/: can_socketcan.h  funcattrs.h  pcap.h
resources/: nesca-database
source/: nesca4.cc  nescadata.cc  nescaengine.cc  nescahttp.cc  nescalog.cc  nescaopts.cc  nescarawrecv.cc  (+2 more)
(+8 files in other folders)
